add logo and wire navigation links

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -22,7 +22,9 @@
 
             <header>
                 <!-- Logo -->
-                <a class="logo" href="/"></a>
+                <a class="logo" href="/">
+                    <img src="public/logo.png" alt="Logo" />
+                </a>
                 <!-- Navigation -->
                 <nav class="menu">
                     <ul>
@@ -30,19 +32,19 @@
                             <a href="/">Home</a>
                         </li>
                         <li class="loggedOut">
-                            <a href="/">Signup</a>
+                            <a href="/account/create">Signup</a>
                         </li>
                         <li class="loggedOut">
-                            <a href="/">Login</a>
+                            <a href="/session/create">Login</a>
                         </li>
                         <li class="loggedIn">
-                            <a href="/">Dashboard</a>
+                            <a href="/checks/all">Dashboard</a>
                         </li>
                         <li class="loggedIn">
-                            <a href="/">Account</a>
+                            <a href="/account/edit">Account</a>
                         </li>
                         <li class="loggedIn">
-                            <a href="/">Logout</a>
+                            <a href="#">Logout</a>
                         </li>
                     </ul>
                 </nav>
