add more markup to index + alter one of the nav links

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -41,7 +41,7 @@
                             <a href="/checks/all">Dashboard</a>
                         </li>
                         <li class="loggedIn">
-                            <a href="/account/edit">Account</a>
+                            <a href="/account/edit">Account Settings</a>
                         </li>
                         <li class="loggedIn">
                             <a href="#">Logout</a>
