--- a/public/app.css
+++ b/public/app.css
@@ -90,6 +90,8 @@ body,p,h1,h2,h3,h4,h5,h6,div,span,header,footer,img,a,a:hover,a:active,a:visited
     border-width: 1px 0 0 0;
     border-color: #fff;
     border-style: solid;
+    position: absolute;
+    bottom: 0;
   }
   
   footer .copyright {
