--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <h2>Made Simple</h2>
 
 <div class="blurb">
-    We offer free, simple uptime monitoring for HTTP/HTTPS sites of all kinds. When your site goes down, we'll shoot you a text to let you know.
+    {head.description}
 </div>
 
 <div class="ctaWrapper">
